This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2002-08-09 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Release as 0.3.2rc2
	
	* msvc6/log4cppDLL/log4cppDLL.rc: update version and product info.

	* include/log4cpp/Portability.hh: added comments.

	* src/Category.cpp: added lock to getAllAppenders().

	* doc/html/index.html: more documentation updates.

	* tests/testCategory.cpp, tests/testConfig.cpp, tests/testDLL.cpp,
	tests/testFilter.cpp, tests/testPropConfig.cpp, 
	tests/testbench.cpp: Replaced #include "log4cpp/X" with 
	#include <log4cpp/X>

	* tests/testProperties.cpp, tests/testPropertyConfig.cpp: added.

	* configure.in, doc/Makefile.am, doc/html/Makefile.am: added doc/html
	to automake.
	
2002-08-09 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/RollingFileAppender.hh: correct constness of 
	constructor parameters, as pointed out by James Emery.

2002-08-06 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* configure.ac, configure.in: renamed configure.ac back to 
	configure.in due to bug in libtoolize 1.4.2

	* NEWS, README, INSTALL, doc/html/index.html: converted most 
	documentation to HTML.

	* m4/CREATE_GENERIC_CONFIG.m4: fix log4cpp-config creation (use
	PACKAGE_TARNAME instead of PACKAGE).
	
2002-08-06 David Resnick <dresnick@mobilespear.com>
    * msvc6/log4cppDLL/log4cppDLL.rc: Cleanup.
    * msvc6/log4cppDLL/resource.h deleted: Unnecessary.

2002-08-05 David Resnick <dresnick@mobilespear.com>
    * msvc6/log4cppDLL/log4cppDLL.rc, msvc6/log4cppDLL/resource.h:
    Version property sheet added to DLL.

2002-08-04 David Resnick <dresnick@mobilespear.com>
	* src/PropertyConfiguratorImpl.cpp: added RollingFileAppender,
	NTEventLogAppender. Threshold attrib added for appenders. Invalid
	priority in configureCategory prints message of invalid_argument
	exception.
	* src/Priority.cpp: surrounding quotes added around invalid priority