@@ -1,5 +1,8 @@
 This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.
 
+2002-08-13 David Resnick <dresnick@mobilespear.com>
+    * include/log4cpp/PatternLayout.hh: documentation fixes.
+    
 2002-08-09 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
 	* Release as 0.3.2rc2
 	
